# gprMax-projects

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
scripts/: gpr_batch.py  gpr_chain.py  outputfile_converter.py  plot_trace_gain.py
shared/: hdf5_tools.py  plotting.py
wheels/: README.md
wheels/geometries/: wheel_geometry.h5  wheel_geometry_polygons.csv  wheel_material_id_mapping.csv  wheels_geometry.txt  wheels_watertable_geometry.h5
wheels/materials/: base_sand_material_001.txt  base_sand_material_003.txt  base_sand_material_004.txt  base_sand_material_005.txt  base_sand_material_006.txt  base_sand_material_009.txt  base_sand_material_011.txt  base_sand_material_012.txt  base_sand_material_013.txt  base_sand_material_014.txt  base_sand_material_017.txt  base_sand_material_index.csv  base_sand_material_readme.txt  material_best_estimate.txt  material_parameter_ranges.csv  material_sweep_001.txt  material_sweep_002.txt  material_sweep_003.txt  material_sweep_004.txt  material_sweep_005.txt  material_sweep_006.txt  material_sweep_007.txt  material_sweep_008.txt  material_sweep_009.txt  material_sweep_010.txt  material_sweep_011.txt  material_sweep_012.txt  material_sweep_013.txt  material_sweep_014.txt  material_sweep_015.txt  material_sweep_016.txt  material_sweep_017.txt  material_sweep_018.txt  material_sweep_019.txt  material_sweep_020.txt  material_sweep_021.txt  material_sweep_022.txt  material_sweep_023.txt  material_sweep_024.txt  material_sweep_025.txt  (+29 more)
wheels/models/: 3models_197ascans.toml  _material_sweep_1ascan__m010__a1_.in  base_sand_material_002.txt  base_sand_material_007.txt  base_sand_material_008.txt  base_sand_material_010.txt  base_sand_material_015.txt  base_sand_material_016.txt  chain_config.csv  chain_config_110m_1ascan_parameter_sweep.csv  chain_config_3endmembers197.csv  chain_config_noWT_old.csv  material_sweep_1ascan.toml  materials.txt  materials_watertable.txt  run_config.toml  start_test_1ascan.toml  wheels-chain.in  wheels-chain_110m_1ascan_parameter_sweep.in  wheels-chain_3endmembers197.in  wheels.in
wheels/scripts/: create_geometry.py  create_geometry_watertable.py  extract_polygons.py
