[project]
name = "gprmax-projects"
version = "0.1.0"
description = "Shared Pixi workspace for gprMax modelling studies"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.pixi.workspace]
channels = ["conda-forge"]
name = "gprmax-projects"
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
scipy = "*"
matplotlib = "*"
h5py = "*"
jupyterlab = "*"
cython = "*"
psutil = "*"
colorama = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
tqdm = "*"
terminaltables = "*"
# The upstream gprMax repository is expected to be cloned as a sibling checkout.
# Update this path if your local gprMax clone lives somewhere else.
gprmax = { path = "../gprMax", editable = true }

[tool.pixi.tasks]
build = { cmd = "python -m pip wheel --no-deps --wheel-dir ./.pixi/dist ../gprMax" }
install = { cmd = "python -m pip install --no-deps --editable ../gprMax" }
setup = { depends-on = ["build", "install"] }
wheels_geom = { cmd = "python wheels/scripts/create_geometry.py" }
wheels_run = { cmd = "python -m gprMax wheels/models/wheels.in" }
wheels = { depends-on = ["wheels_geom", "wheels_run"] }
shell = { cmd = "pixi shell" }
