[project]
name = "gprmax-projects"
version = "0.1.0"
description = "Shared Pixi workspace for gprMax modelling studies"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.pixi.workspace]
channels = ["conda-forge"]
name = "gprmax-projects"
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
scipy = "*"
matplotlib = "*"
h5py = "*"
netcdf4 = "*"
pandas = "*"
pillow = "*"
jupyterlab = "*"
cython = "*"
psutil = "*"
mpi4py = "*"
colorama = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
# The upstream gprMax repository is expected to be cloned as a sibling checkout.
# Note: gprMax requires numpy/cython for building; these are in conda dependencies above.
gprmax = { path = "../gprMax", editable = true }
tqdm = "*"
terminaltables = "*"
setuptools = "*"  # Ensure setuptools is available for building

[tool.pixi.tasks]
wheels = { cmd = "python scripts/gpr_batch.py wheels/models/wheels.in" }
convert = { cmd = "python scripts/outputfile_converter.py" }
plot = { cmd = "python -m tools.plot_Bscan" }

