[project]
name = "gprmax-projects"
version = "0.1.0"
description = "Shared Pixi workspace for gprMax modelling studies"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.pixi.workspace]
channels = ["conda-forge"]
name = "gprmax-projects"
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
scipy = "*"
matplotlib = "*"
h5py = "*"
netcdf4 = "*"
pandas = "*"
pillow = "*"
jupyterlab = "*"
cython = "*"
psutil = "*"
mpi4py = "*"
colorama = "*"
pip = "*"
scikit-image = ">=0.26.0,<0.27"
pycuda = ">=2025.1.2,<2026"

[tool.pixi.pypi-dependencies]
# The upstream gprMax repository is expected to be cloned as a sibling checkout.
# Note: gprMax requires numpy/cython for building; these are in conda dependencies above.
gprmax = { path = "../gprMax", editable = true }
tqdm = "*"
terminaltables = "*"
setuptools = "*"  # Ensure setuptools is available for building

[tool.pixi.tasks]
wheels = { cmd = "python scripts/gpr_chain.py --config wheels/models/start_test_1ascan.toml" }
convert = { cmd = "python scripts/outputfile_converter.py" }
plot = { cmd = "python -m tools.plot_Bscan" }

